--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 <body>
   <div class="container">
     <img src="image.png" alt="팽이초콜릿 구조도" class="hero-img" />
-    <a href="https://www.pang2chocolate.com" class="click-area enter-btn">입장</a>
-    <a href="https://www.pang2chocolate.net" class="click-area suggest-btn">제안</a>
+    <a href="https://www.pang2chocolate.net" class="click-area enter-btn">입장</a>
+    <a href="https://tally.so/r/w5O556" class="click-area suggest-btn">제안</a>
   </div>
 </body>
 </html>
