--- a/index.html
+++ b/index.html
@@ -77,3 +77,15 @@
   </div>
 </body>
 </html>
+
+
+사용자가 **모바일 브라우저에서 ‘홈 화면에 추가’**를 눌렀을 때
+→ **원하는 이미지(앱 아이콘처럼)**가 뜨도록 만들기.
+<!-- manifest 연결 -->
+<link rel="manifest" href="/manifest.json">
+
+<!-- iOS 대응 (애플은 manifest를 안 씀) -->
+<link rel="apple-touch-icon" href="/icons/icon-192.png">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-title" content="팽이초콜릿">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
