--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 <!-- manifest 연결 -->
-<link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="./manifest.json">
 
 <!-- iOS 전용 (ios는 manifest를 인식하지 않음) -->
 <link rel="apple-touch-icon" href="/icons/icon-192.png">
