--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+
+  북마크바 저장 시 아이콘 보이도
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+  
 <!-- manifest 연결 -->
 <link rel="manifest" href="/manifest.json">
 
