--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 
   북마크바 저장 시 아이콘 보이도
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
+ <meta charset="UTF-8">
+  <title>팽이초콜릿</title>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   
 <!-- manifest 연결 -->
 <link rel="manifest" href="/manifest.json">
