--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="ko">
 <head>
 
+  링크 공유시 이미지 및 타이틀
+<meta property="og:title" content="팽이초콜릿 - 팽이는 우리가 함께 돌려야 더 재밌어">
+<meta property="og:image" content="https://pang2chocolate.com/images/preview.jpg">
+<meta property="og:url" content="https://pang2chocolate.com">
+<meta property="og:type" content="website">
+  
 북마크바 저장 시 아이콘 보이도
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
   
