--- a/index.html
+++ b/index.html
@@ -21,73 +21,55 @@
 <meta name="apple-mobile-web-app-title" content="팽이초콜릿">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="robots" content="index, follow" />
+
+<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>팽이초콜릿</title>
   <style>
-    html, body {
+    body {
       margin: 0;
       padding: 0;
-      background-color: #000;
-      width: 100%;
-      height: 100%;
-      font-family: 'Arial', sans-serif;
     }
-
     .container {
       position: relative;
       width: 100%;
-      max-width: 715px;
+      max-width: 1920px;
       margin: 0 auto;
     }
-
-    .hero-img {
+    .main-image {
       width: 100%;
       height: auto;
       display: block;
     }
-
-    .click-area {
+    .button {
       position: absolute;
-      display: block;
-      z-index: 99999;
-      pointer-events: auto;
-      text-indent: -9999px;
-      background-color: rgba(255, 255, 255, 0); /* clickable even if transparent */
+      cursor: pointer;
+      z-index: 10;
     }
-
-    /* 데스크톱용 클릭 위치 */
-    .enter-btn {
-      left: 85px;
-      top: 1805px;
-      width: 190px;
-      height: 100px;
+    /* 위치 조정 (이미지 기준으로 비율 설정) */
+    .enter-button {
+      top: 69%;
+      left: 29.5%;
+      width: 16%;
+      height: 7%;
     }
-
-    .suggest-btn {
-      left: 435px;
-      top: 1805px;
-      width: 190px;
-      height: 100px;
-    }
-
-    @media (max-width: 768px) {
-      .enter-btn {
-        left: 12vw;
-        top: 178vw;
-        width: 27vw;
-        height: 10vw;
-      }
-
-      .suggest-btn {
-        left: 60vw;
-        top: 178vw;
-        width: 27vw;
-        height: 10vw;
-      }
+    .suggest-button {
+      top: 69%;
+      left: 54%;
+      width: 16%;
+      height: 7%;
     }
   </style>
+</head>
+<body>
+  <div class="container">
+    <img class="main-image" src="https://www.pang2chocolate.com/images/main.jpg" alt="팽이초콜릿 메인">
+    
+    <a href="https://app.pang2chocolate.com" class="button enter-button"></a>
+    <a href="https://tally.so/r/w5O556" class="button suggest-button"></a>
+  </div>
+
+  
 </head>
 <body>
   <div class="container">
