--- a/index.html
+++ b/index.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-
-  링크 공유시 이미지 및 타이틀
-<meta property="og:title" content="팽이초콜릿" />
-<meta property="og:description" content="팽이는 우리가 함께 돌려야 더 재밌어" />
-<meta property="og:image" content="https://www.pang2chocolate.com/images/preview.jpg" />
-<meta property="og:url" content="https://www.pang2chocolate.com/" />
-<meta property="og:type" content="website" />
-  
-북마크바 저장 시 아이콘 보이도
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
-  
-<!-- manifest 연결 -->
-<link rel="manifest" href="/manifest.json">
-
-<!-- iOS 전용 (ios는 manifest를 인식하지 않음) -->
-<link rel="apple-touch-icon" href="/icons/icon-192.png">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-title" content="팽이초콜릿">
-<meta name="apple-mobile-web-app-status-bar-style" content="default">
-
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>팽이초콜릿</title>
+
+  <!-- 링크 공유 시 이미지 및 타이틀 -->
+  <meta property="og:title" content="팽이초콜릿" />
+  <meta property="og:description" content="팽이는 우리가 함께 돌려야 더 재밌어" />
+  <meta property="og:image" content="/images/preview.jpg" />
+  <meta property="og:url" content="https://www.pang2chocolate.com/" />
+  <meta property="og:type" content="website" />
+
+  <!-- 북마크 및 앱 아이콘 -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="/icons/icon-192.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="팽이초콜릿">
+
+  <!-- manifest (존재할 경우 유지) -->
+  <link rel="manifest" href="/manifest.json">
+
   <style>
     body {
       margin: 0;
@@ -49,7 +46,7 @@
       z-index: 10;
     }
 
-    /* 기본 위치 (데스크탑 기준 비율) */
+    /* 데스크탑 기준 위치 */
     .enter-button {
       top: 69%;
       left: 29.5%;
@@ -86,16 +83,12 @@
   <div class="container">
     <img
       class="main-image"
-      src="https://www.pang2chocolate.com/images/main.jpg"
+      src="/images/main.jpg"
       alt="팽이초콜릿 메인"
     />
 
     <a href="https://app.pang2chocolate.com" class="button enter-button"></a>
     <a href="https://tally.so/r/w5O556" class="button suggest-button"></a>
   </div>
-
 </body>
 </html>
-
-
-
