--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 
   <!-- 북마크 및 앱 아이콘 -->
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" href="/icons/icon-192.png">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-title" content="팽이초콜릿">
+  <link rel="apple-touch-icon" href="/icons/icon-192.png" sizes="192x192">
 
   <!-- manifest (존재할 경우 유지) -->
   <link rel="manifest" href="/manifest.json">
