--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="apple-touch-icon" href="/icons/icon-192.png" sizes="192x192">
 
-  <!-- manifest (존재할 경우 유지) -->
+  <!-- 북마크바 아이콘 -->
   <link rel="manifest" href="/manifest.json">
 
   <style>
