--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>팽이초콜릿</title>
 
-  <!-- 링크 공유 시 이미지 및 타이틀 -->
+  <!-- SNS 공유 미리보기 -->
   <meta property="og:title" content="팽이초콜릿" />
   <meta property="og:description" content="팽이는 우리가 함께 돌려야 더 재밌어" />
   <meta property="og:image" content="/images/preview.jpg" />
   <meta property="og:url" content="https://www.pang2chocolate.com/" />
   <meta property="og:type" content="website" />
 
-  <!-- 북마크 및 앱 아이콘 -->
+  <!-- 브라우저 탭 아이콘 -->
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" href="/icons/icon-192.png" sizes="192x192">
 
-  <!-- 북마크바 아이콘 -->
-  <link rel="manifest" href="/manifest.json">
+  <!-- iOS 홈화면 추가용 아이콘 -->
+  <link rel="apple-touch-icon" href="/icons/icon-192.png" sizes="192x192">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="팽이초콜릿">
 
   <style>
     body {
@@ -44,7 +45,6 @@
       z-index: 10;
     }
 
-    /* 데스크탑 기준 위치 */
     .enter-button {
       top: 69%;
       left: 29.5%;
@@ -59,7 +59,6 @@
       height: 7%;
     }
 
-    /* 모바일 대응 */
     @media screen and (max-width: 768px) {
       .enter-button {
         top: 69%;
