--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-title" content="팽이초콜릿">
 
+
+  
   <style>
+    
     body {
       margin: 0;
       padding: 0;
@@ -74,6 +77,16 @@
         height: 8%;
       }
     }
+@keyframes bounce {
+    0%, 100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-8px);
+    }
+  }
+
+    
   </style>
 </head>
 <body>
