--- a/index.html
+++ b/index.html
@@ -85,7 +85,27 @@
       transform: translateY(-8px);
     }
   }
+.enter-button {
+  top: 69%;
+  left: 29.5%;
+  width: 16%;
+  height: 7%;
+  background-image: url("/images/enter-btn.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 
+.suggest-button {
+  top: 69%;
+  left: 54%;
+  width: 16%;
+  height: 7%;
+  background-image: url("/images/suggest-btn.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
     
   </style>
 </head>
