--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   width: 16%;
   height: 7%;
   background-image: url("/images/enter-btn.png");
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -102,7 +102,7 @@
   width: 16%;
   height: 7%;
   background-image: url("/images/suggest-btn.png");
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
 }
