--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-title" content="팽이초콜릿">
 
-
-  
   <style>
-    
     body {
       margin: 0;
       padding: 0;
@@ -46,79 +43,65 @@
       position: absolute;
       cursor: pointer;
       z-index: 10;
+      animation: bounce 2s infinite;
+      animation-timing-function: ease-in-out;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      transition: transform 0.1s ease;
+    }
+
+    .button:active {
+      transform: scale(0.95); /* 클릭 시 살짝 작아짐 */
     }
 
     .enter-button {
-      top: 69%;
-      left: 29.5%;
-      width: 16%;
-      height: 7%;
+      top: 60vh;
+      left: 20vw;
+      width: 28vw;
+      height: 28vw;
+      background-image: url("/images/enter-btn.png");
     }
 
     .suggest-button {
-      top: 69%;
-      left: 54%;
-      width: 16%;
-      height: 7%;
+      top: 60vh;
+      left: 65vw;
+      width: 28vw;
+      height: 28vw;
+      background-image: url("/images/suggest-btn.png");
     }
 
     @media screen and (max-width: 768px) {
       .enter-button {
-        top: 69%;
-        left: 26%;
-        width: 21%;
-        height: 8%;
+        top: 65vh;
+        left: 12vw;
+        width: 36vw;
+        height: 22vw;
       }
 
       .suggest-button {
-        top: 69%;
-        left: 53%;
-        width: 21%;
-        height: 8%;
+        top: 65vh;
+        left: 52vw;
+        width: 36vw;
+        height: 22vw;
       }
     }
-@keyframes bounce {
-    0%, 100% {
-      transform: translateY(0);
-    }
-    50% {
-      transform: translateY(-8px);
-    }
-  }
-.enter-button {
-  top: 60%;
-  left: 20%;
-  width: 28%;
-  height: 28%;
-  background-image: url("/images/enter-btn.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
 
-.suggest-button {
-  top: 60%;
-  left: 65%;
-  width: 28%;
-  height: 28%;
-  background-image: url("/images/suggest-btn.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-    
+    @keyframes bounce {
+      0%, 100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-8px);
+      }
+    }
   </style>
 </head>
 <body>
   <div class="container">
-    <img
-      class="main-image"
-      src="/images/main.jpg"
-      alt="팽이초콜릿 메인"
-    />
-
+    <img class="main-image" src="/images/main.jpg" alt="팽이초콜릿 메인" />
     <a href="https://app.pang2chocolate.com" class="button enter-button"></a>
     <a href="https://tally.so/r/w5O556" class="button suggest-button"></a>
   </div>
 </body>
-</html>
+</html
