--- a/index.html
+++ b/index.html
@@ -39,53 +39,7 @@
       display: block;
     }
 
-    .button {
-      position: absolute;
-      cursor: pointer;
-      z-index: 10;
-      animation: bounce 2s infinite;
-      animation-timing-function: ease-in-out;
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
-      transition: transform 0.1s ease;
-    }
-
-    .button:active {
-      transform: scale(0.95); /* 클릭 시 살짝 작아짐 */
-    }
-
-    .enter-button {
-      top: 201.3vh;
-      left: 11.7vw;
-      width: 28vw;
-      height: 28vw;
-      background-image: url("/images/enter-btn.png");
-    }
-
-    .suggest-button {
-      top: 201.3vh;
-      left: 58.7vw;
-      width: 28vw;
-      height: 28vw;
-      background-image: url("/images/suggest-btn.png");
-    }
-
-    @media screen and (max-width: 768px) {
-      .enter-button {
-        top: 89.6vh;
-        left: 11.58vw;
-        width: 30vw;
-        height: 30vw;
-      }
-
-      .suggest-button {
-        top: 89.6vh;
-        left: 59vw;
-        width: 30vw;
-        height: 30vw;
-      }
-    }
+    
 .button {
   position: absolute;
   cursor: pointer;
@@ -95,7 +49,9 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  transition: transform 0.1s ease, filter 0.1s ease;
+  transition: transform 0.1s ease, filter 0.1s ease, background-color 0.1s ease;
+  -webkit-tap-highlight-color: transparent; /* 모바일 클릭시 파란 테두리 제거 */
+  outline: none;
 }
 
 /* 마우스를 올렸을 때 밝아짐 */
@@ -103,6 +59,43 @@
   filter: brightness(1.2);
 }
 
+.button:active {
+      transform: scale(0.95); /* 클릭 시 살짝 작아짐 */
+    }
+
+/* 위치와 크기를 % 기준으로 조정 */
+.enter-button {
+  top: 70%;
+  left: 15%;
+  width: 25%;
+  height: 25%;
+  background-image: url("/images/enter-btn.png");
+}
+
+.suggest-button {
+  top: 70%;
+  left: 60%;
+  width: 25%;
+  height: 25%;
+  background-image: url("/images/suggest-btn.png");
+}
+
+/* 모바일 대응 */
+@media screen and (max-width: 768px) {
+  .enter-button {
+    top: 72%;
+    left: 10%;
+    width: 35%;
+    height: 30%;
+  }
+
+  .suggest-button {
+    top: 72%;
+    left: 55%;
+    width: 35%;
+    height: 30%;
+  }
+}
     
   </style>
 </head>
