--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
   height: 24%;
   background-image: url("/images/suggest-btn.png");
 }
-
+.button {
+  background-size: 100% 100%;
+}
 /* 모바일 대응 */
 @media screen and (max-width: 768px) {
   .enter-button {
