--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   /* 📍 입장 버튼 */
   .enter-button {
     top: 63.4%;
-    left: 12.7%;
+    left: 12.6%;
     width: 29%;
     background-image: url("/images/enter-btn.png");
   }
@@ -83,7 +83,7 @@
   /* 📍 제안 버튼 */
   .suggest-button {
     top: 63.4%;
-    left: 59.6%;
+    left: 59.7%;
     width: 29%;
     background-image: url("/images/suggest-btn.png");
   }
@@ -103,7 +103,11 @@
     }
   }
 
-  /* 🔁 통통 튀는 애니메이션 */
+  /* 🔁 통통 튀는 애니메이션 */.
+  .button {
+  animation: bounce 4s infinite;
+  animation-timing-function: ease-in-out;
+}
   @keyframes bounce {
     0%, 100% {
       transform: translateY(0);
