--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   /* ✊ 스케일 + 살짝 어두워짐 (감각적 눌림)  */
   .button:active {
-  transform: scale(0.95) translateY(1px);
+  transform: scale(0.95)
   filter: brightness(0.92);
 }
 
