--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
     filter: brightness(1.2);
   }
 
-  /* ✊ 스케일 + 살짝 어두워짐 (감각적 눌림)  */
+  /* ✊ 누를 시 작아짐 + 살짝 어두워짐  */
   .button:active {
   transform: scale(0.95)
-  filter: brightness(0.92);
+  filter: brightness(0.70);
 }
 
   /* 📍 입장 버튼 */
