--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
     filter: brightness(1.2);
   }
 
-  /* ✊ 누를 시 작아짐 + 살짝 어두워짐  */
-  .button:active {
-  transform: scale(0.70)
-  filter: brightness(0.30);
+  /* ✊ 누를 시 살짝 어두워지고, 작아지고, 눌리는 듯한 느낌  */
+  button:active {
+  transform: scale(0.96);
+  filter: brightness(85%);
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
   /* 📍 입장 버튼 */
