--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   }
 
   /* ✊ 누를 시 살짝 어두워지고, 작아지고, 눌리는 듯한 느낌  */
-  button:active {
+  .button:active {
   transform: scale(0.96);
   filter: brightness(85%);
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
