--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>팽이초콜릿</title>
 
+<!-- ✅ [검색엔진 최적화용 메타태그] -->
+<title>팽이초콜릿</title>
+<meta name="title" content="팽이초콜릿 - 고품질 초저가 공동구매" />
+<meta name="description" content="공동구매,고품질,초저가,최저가,팽이초콜릿." />
+<meta name="keywords" content="팽이초콜릿, 공동구매, 초저가 쇼핑몰, 회원제 쇼핑, 커뮤니티 쇼핑" />
+<meta name="author" content="팽이초콜릿" />
+<meta name="robots" content="index, follow" />
+  
   <!-- SNS 공유 미리보기 -->
   <meta property="og:title" content="팽이초콜릿" />
   <meta property="og:description" content="팽이는 우리가 함께 돌려야 더 재밌어" />
@@ -107,7 +115,6 @@
 
   /* 🔁 통통 튀는 애니메이션 */.
   .button {
-  animation: bounce 4s infinite;
   animation-timing-function: ease-in-out;
 }
   @keyframes bounce {
