--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>팽이초콜릿</title>
-
+  
+<meta name="google-site-verification" content="UZq5O6bH7D8TpmBdnd8O6Gl1uWbXNWATZ-STtqSXETE" />
+  
 <!-- ✅ [검색엔진 최적화용 메타태그] -->
 <title>팽이초콜릿</title>
 <meta name="title" content="팽이초콜릿 - 고품질 초저가 공동구매" />
