--- a/index.html
+++ b/index.html
@@ -78,10 +78,9 @@
 
   /* ✊ 누를 시 살짝 어두워지고, 작아지고, 눌리는 듯한 느낌  */
   .button:active {
-  transform: translateY(0) scale(0.92);   /* ✅ 동시에 적용 */
+  transform: scale(0.92);     
   filter: brightness(85%);
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-  animation-play-state: paused;           /* 선택: bounce 일시 멈춤 */
+  animation-play-state: paused;
 }
 
   /* 📍 입장 버튼 */
@@ -116,9 +115,6 @@
   }
 
   /* 🔁 통통 튀는 애니메이션 */.
-  .button {
-  animation-timing-function: ease-in-out;
-}
   @keyframes bounce {
     0%, 100% {
       transform: translateY(0);
