--- a/index.html
+++ b/index.html
@@ -76,10 +76,8 @@
 
   /* ✊ 클릭 시 작아짐 + 어두워짐 + bounce 중단 */
     .button:active {
-      transform: translateY(0) scale(0.92);  /* ✅ 눌림 + bounce 위치 초기화 */
+      transform: scale(0.92); /* 👈 실제로 작아짐 */
       filter: brightness(85%);
-      animation-play-state: paused;         /* 눌리는 동안 bounce 일시 정지 */
-    }
 
   /* 📍 입장 버튼 */
   .enter-button {
@@ -128,13 +126,13 @@
         transform: translateY(0);
       }
       30% {
-        transform: translateY(-2px);
+        transform: translateY(-6px);
       }
       50% {
         transform: translateY(0);
       }
       70% {
-        transform: translateY(-1px);
+        transform: translateY(-3px);
       }
     }
 
