--- a/index.html
+++ b/index.html
@@ -54,27 +54,34 @@
 
   /* 🎯 공통 버튼 스타일 */
   .button {
-      position: absolute;
-      display: block;
-      cursor: pointer;
-      z-index: 10;
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
-      transition: transform 0.1s ease, filter 0.1s ease;
-      animation: bounce 2s infinite;infinite ease-in-out;
-      aspect-ratio: 1 / 1;
-    }
+    position: absolute;
+    display: block;                          /* 클릭 영역 일치 */
+    cursor: pointer;
+    z-index: 10;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    transition: transform 0.1s ease, filter 0.1s ease, background-color 0.1s ease;
+    animation: bounce 2s infinite;
+    animation-timing-function: ease-in-out;
+    -webkit-tap-highlight-color: transparent;
+    outline: none;
+    
+    /* ✅ 정사각형 비율 고정 */
+    aspect-ratio: 1 / 1;                     /* 1:1 비율 유지 */
+  }
 
   /* ✨ hover 시 효과: 살짝 밝아짐 */
   .button:hover {
     filter: brightness(1.2);
   }
 
-  /* ✊ 클릭 시 작아짐 + 어두워짐 + bounce 중단 */
-    .button:active {
-      transform: scale(0.92); /* 👈 실제로 작아짐 */
-      filter: brightness(85%);
+  /* ✊ 누를 시 살짝 어두워지고, 작아지고, 눌리는 듯한 느낌  */
+  .button:active {
+  transform: scale(0.92);     
+  filter: brightness(85%);
+  animation-play-state: paused;
+}
 
   /* 📍 입장 버튼 */
   .enter-button {
@@ -117,21 +124,20 @@
   filter: brightness(85%);
 }
   
-   /* 🔁 bounce 애니메이션 */
-    @keyframes bounceUpDown {
-      0%, 100% {
-        top: 63.4%;
-      }
-      30% {
-        top: 62.8%;
-      }
-      50% {
-        top: 63.4%;
-      }
-      70% {
-        top: 63.0%;
-      }
-    }
+  @keyframes bounce {
+  0%, 100% {
+    --bounceY: 0px;
+  }
+  30% {
+    --bounceY: -2px;
+  }
+  50% {
+    --bounceY: 0px;
+  }
+  70% {
+    --bounceY: -1px;
+  }
+}
 
   
 </style>
