--- a/index.html
+++ b/index.html
@@ -54,34 +54,48 @@
 
   /* 🎯 공통 버튼 스타일 */
   .button {
-    position: absolute;
-    display: block;                          /* 클릭 영역 일치 */
-    cursor: pointer;
-    z-index: 10;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    transition: transform 0.1s ease, filter 0.1s ease, background-color 0.1s ease;
-    animation: bounce 2s infinite;
-    animation-timing-function: ease-in-out;
-    -webkit-tap-highlight-color: transparent;
-    outline: none;
+      position: absolute;
+      cursor: pointer;
+      z-index: 10;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      width: 100px;
+      height: 100px;
+      border: none;
+      background-color: transparent;
+      animation: bounce 2s infinite ease-in-out;
+      transition: transform 0.1s ease, filter 0.1s ease;
+    }
+
+    .button:hover {
+      filter: brightness(1.1);
+    }
+
+    .button:active {
+      transform: scale(0.92);
+      filter: brightness(85%);
+      animation: none; /* 클릭 중엔 애니메이션 멈춤 */
+    }
+
+    @keyframes bounce {
+      0%, 100% {
+        transform: translateY(0);
+      }
+      30% {
+        transform: translateY(-6px);
+      }
+      50% {
+        transform: translateY(0);
+      }
+      70% {
+        transform: translateY(-3px);
+      }
+    }
     
     /* ✅ 정사각형 비율 고정 */
     aspect-ratio: 1 / 1;                     /* 1:1 비율 유지 */
   }
-
-  /* ✨ hover 시 효과: 살짝 밝아짐 */
-  .button:hover {
-    filter: brightness(1.2);
-  }
-
-  /* ✊ 누를 시 살짝 어두워지고, 작아지고, 눌리는 듯한 느낌  */
-  .button:active {
-  transform: scale(0.92);     
-  filter: brightness(85%);
-  animation-play-state: paused;
-}
 
   /* 📍 입장 버튼 */
   .enter-button {
@@ -113,31 +127,6 @@
       width: 30%;
     }
   }
-
-  /* 🔁 통통 튀는 애니메이션 */.
-  --bounceY: 0px;
-  transform: translateY(var(--bounceY)) scale(1);
-}
-
-  .button:active {
-  transform: translateY(var(--bounceY)) scale(0.92); /* ✅ bounce + 클릭 */
-  filter: brightness(85%);
-}
-  
-  @keyframes bounce {
-  0%, 100% {
-    --bounceY: 0px;
-  }
-  30% {
-    --bounceY: -2px;
-  }
-  50% {
-    --bounceY: 0px;
-  }
-  70% {
-    --bounceY: -1px;
-  }
-}
   
 </style>
 
