--- a/index.html
+++ b/index.html
@@ -38,19 +38,22 @@
   }
 
   /* 메인 컨테이너 */
-  .container {
-    position: relative;
-    width: 100%;
-    max-width: 1920px;
-    margin: 0 auto;
-  }
+ .container {
+  position: relative;
+  width: 100%;
+  /* 이미지 기준으로 꽉 차되, 너무 커지지 않게 제한 */
+  max-width: 100vw;
+  overflow: hidden;
+  margin: 0 auto;
+}
 
   /* 메인 이미지 */
-  .main-image {
-    width: 100%;
-    height: auto;
-    display: block;
-  }
+ .main-image {
+  width: 100%;
+  height: auto;
+  display: block;
+  max-width: 100vw;  /* 💡 데스크톱에서 화면을 넘지 않게 */
+}
 
   /* 🎯 공통 버튼 스타일 */
   .button {
