--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>  
-  <meta name="description" content="팽이는 우리가 함께 돌려야 더 재밌어" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>팽이초콜릿</title>
@@ -38,20 +37,20 @@
     padding: 0;
   }
 
- .container {
-  position: relative;
-  width: 100%;
-  max-width: 100vw;
-  overflow: hidden;
-  margin: 0 auto;
-}
+  /* 메인 컨테이너 */
+  .container {
+    position: relative;
+    width: 100%;
+    max-width: 1920px;
+    margin: 0 auto;
+  }
 
-.main-image {
-  width: 100%;
-  height: auto;
-  display: block;
-  max-width: 100vw;
-}
+  /* 메인 이미지 */
+  .main-image {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
 
   /* 🎯 공통 버튼 스타일 */
   .button {
@@ -155,4 +154,6 @@
     <a href="https://tally.so/r/w5O556" class="button suggest-button"></a>
   </div>
 </body>
+
+  
 </html
