--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   
   
 <!-- ✅ [검색엔진 최적화용 메타태그] -->
-<title>팽이초콜릿 - 팽이는 우리가 함께 돌려야 더 재밌어</title>
-<meta name="title" content="팽이초콜릿 - 팽이는 우리가 함께 돌려야 더 재밌어" />
-<meta name="description" content="공동구매,고품질,초저가,최저가,팽이초콜릿." />
-<meta name="keywords" content="팽이초콜릿, 공동구매, 초저가 쇼핑몰, 회원제 쇼핑, 커뮤니티 쇼핑" />
+<title>팽이초콜릿</title>
+<meta name="title" content="팽이는 우리가 함께 돌려야 더 재밌어" />
+<meta name="description" content="팽이초콜릿 - 팽이는 우리가 함께 돌려야 더 재밌어" />
+<meta name="keywords" content="팽이초콜릿 - 팽이는 우리가 함께 돌려야 더 재밌어" />
 <meta name="author" content="팽이초콜릿" />
 <meta name="robots" content="index, follow" />
   
