--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
   
 </head>
 <body>
+  <div style="position: absolute; left: -9999px; top: -9999px;">
+  팽이초콜릿 - 좋은제품을 좋은가격에
+</div>
   <div class="container">
     <img class="main-image" src="/images/main.jpg" alt="팽이초콜릿 메인" />
     <a href="https://app.pang2chocolate.com" class="button enter-button"></a>
