--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: white;
+  background: black;
 }
 #loading img {
   width: 200px;
