--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   <link rel="apple-touch-icon" href="/icons/icon-192.png" sizes="192x192">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-title" content="팽이초콜릿">
-
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="theme-color" content="#000000">
 
 <style>
   /* 기본 레이아웃 설정 */
