--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>팽이초콜릿</title>
   
-  
 <!-- ✅ [검색엔진 최적화용 메타태그] -->
 <title>팽이초콜릿</title>
 <meta name="title" content="팽이는 우리가 함께 돌려야 더 재밌어" />
@@ -13,6 +12,12 @@
 <meta name="keywords" content="팽이초콜릿 - 팽이는 우리가 함께 돌려야 더 재밌어" />
 <meta name="author" content="팽이초콜릿" />
 <meta name="robots" content="index, follow" />
+
+<!-- ✅ manifest 연결 -->
+  <link rel="manifest" href="/manifest.json?v=1">
+
+  <!-- ✅ 테마 색 설정 -->
+  <meta name="theme-color" content="#000000">
   
   <!-- SNS 공유 미리보기 -->
   <meta property="og:title" content="팽이초콜릿" />
