--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     setTimeout(function() {
       document.getElementById("loading").style.display = "none";
       document.getElementById("main").style.display = "block";
-    }, 2000); // ✅ 1초 (1000밀리초) 기다리고 메인화면 보여줌
+    }, 3000); // ✅ 1초 (1000밀리초) 기다리고 메인화면 보여줌
   });
 </script>
   
@@ -171,8 +171,8 @@
   <div id="main" style="display:none;">
     <div class="container">
       <img class="main-image" src="/images/main.jpg" alt="팽이초콜릿 메인" />
-     <a href="#" class="button enter-button" onclick="delayedRedirect('https://app.pang2chocolate.com')"></a>
-<a href="#" class="button suggest-button" onclick="delayedRedirect('https://tally.so/r/w5O556')"></a>
+    <a href="https://app.pang2chocolate.com" class="button enter-button" target="_blank" onclick="showLoading()"></a>
+<a href="https://tally.so/r/w5O556" class="button suggest-button" target="_blank" onclick="showLoading()"></a>
     </div>
   </div>
 
@@ -207,7 +207,7 @@
     document.getElementById("main").style.display = "none";      // 메인화면 숨기기
     setTimeout(function() {
       window.location.href = url;                                // 0.5초 뒤 이동
-    }, 1000); // (단위: ms, 500 = 0.5초)
+    }, 500); // (단위: ms, 500 = 0.5초)
   }
 </script>
 
